# django-template-transpiler

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  pyproject.toml
.github/workflows/: python.yml
dtl-lexer/src/: lib.rs  variable.rs
python/django_rusty_templates/: __init__.py
python/django_rusty_templates/data/: core.js
python/django_template_transpiler/: __init__.py
python/django_template_transpiler/data/: core.js
src/: js.rs  lex.rs  lib.rs  loaders.rs  parse.rs  parser.rs  tag_if.rs  template.rs  utils.rs  variable.rs
src/js/: parser.rs  utils.rs
src/lex/: variable.rs
src/render/: filters.rs  tags.rs
tests/: conftest.py  settings.py  test_transpiler.py  views.py
tests/js/: test_transpiler.py
tests/templates/: full_example.html  home.html
