[package]
name = "django-template-transpiler"
version = "0.1.0"
edition = "2024"

[lib]
name = "django_template_transpiler"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["num-bigint"] }
regex = "1.11.2"
oxc = { version = "0.98.0", features = ["full"] }
dtl-lexer = { git = "https://github.com/LilyFirefly/django-rusty-templates" }
