[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "django-rusty-templates"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"

[tool.pytest]
strict_xfail = true
DJANGO_SETTINGS_MODULE = "tests.settings"
django_debug_mode = true

[dependency-groups]
dev = [
    "django",
    "hypothesis",
    "maturin",
    "pytest",
    "pytest-django",
    "pytest-playwright",
    "pytest-cov",
    "ruff",
    "pre-commit"
]

[tool.ruff]
target-version = "py310"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

[tool.typos.default.extend-identifiers]
Nd = "Nd" # This is a valid identifier for `hypothesis.strategies.characters.categories`
